[gd_scene load_steps=28 format=3 uid="uid://b65somsc1b8du"]

[ext_resource type="Script" path="res://scenes/components/quest/quest.gd" id="1_rtgrk"]
[ext_resource type="PackedScene" uid="uid://5irqm3tl8y7p" path="res://scenes/components/target/target.tscn" id="2_qr0tn"]
[ext_resource type="PackedScene" uid="uid://ulm8yaheoho3" path="res://scenes/components/job/job.tscn" id="3_3j6i2"]
[ext_resource type="Script" path="res://scenes/components/quest/target_anim.gd" id="4_csc0v"]
[ext_resource type="Texture2D" uid="uid://cklul72u7qmss" path="res://scenes/components/quest/target.png" id="4_ywm42"]
[ext_resource type="Texture2D" uid="uid://ganat6gtg6ft" path="res://scenes/components/quest/lock.png" id="6_7a5f6"]
[ext_resource type="Script" path="res://scenes/components/quest/lock_anim.gd" id="7_vrxjh"]
[ext_resource type="Texture2D" uid="uid://0orgaqmxc114" path="res://scenes/components/quest/effect.png" id="8_xxjx3"]
[ext_resource type="Script" path="res://scenes/components/quest/effect_anim.gd" id="9_688y4"]
[ext_resource type="AudioStream" uid="uid://jbqivi3p1p22" path="res://sound/target_select.wav" id="10_u2hce"]
[ext_resource type="AudioStream" uid="uid://dh1vj7o5cm5no" path="res://sound/button_2.wav" id="11_dk1aq"]
[ext_resource type="AudioStream" uid="uid://dg3moj7c7iwlt" path="res://sound/incorrect.wav" id="12_83d8e"]
[ext_resource type="AudioStream" uid="uid://bt0r2fggnsikn" path="res://sound/hit_1.wav" id="13_8dv6b"]

[sub_resource type="Animation" id="Animation_4p5fj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TargetRing:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TargetRing:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RingGhost:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RingGhost:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RingGhost:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_s0wf2"]
resource_name = "hover"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TargetRing:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(-2),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TargetRing:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RingGhost:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_d8nsk"]
resource_name = "idle"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TargetRing:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0.95, 0.95), Vector2(1.1, 1.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TargetRing:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.235294)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RingGhost:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_yre3w"]
resource_name = "selected"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TargetRing:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TargetRing:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.890196, 0.254902, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RingGhost:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(0.267943, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RingGhost:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(0.267943, 1),
"update": 0,
"values": [Vector2(1.2, 1.2), Vector2(2, 2)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RingGhost:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_e8scs"]
resource_name = "target"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TargetRing:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(0.5, 2, 1),
"update": 0,
"values": [Vector2(1.44444, 0.351351), Vector2(0.634921, 1.21622), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TargetRing:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RingGhost:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_58pig"]
_data = {
"RESET": SubResource("Animation_4p5fj"),
"hover": SubResource("Animation_s0wf2"),
"idle": SubResource("Animation_d8nsk"),
"selected": SubResource("Animation_yre3w"),
"target": SubResource("Animation_e8scs")
}

[sub_resource type="Animation" id="Animation_2npnx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.784314)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_kxp5r"]
resource_name = "locked"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.784314)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [-0.10472, 0.10472]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_o6qbl"]
resource_name = "unlock"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(0.277, 3.47728),
"update": 0,
"values": [Color(1, 1, 1, 0.784314), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(-2),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(0.277392, 1),
"update": 0,
"values": [Vector2(0.9, 0.9), Vector2(1.4, 1.4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vbhyh"]
_data = {
"RESET": SubResource("Animation_2npnx"),
"locked": SubResource("Animation_kxp5r"),
"unlock": SubResource("Animation_o6qbl")
}

[sub_resource type="Animation" id="Animation_0vijb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_025r6"]
resource_name = "lose"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(3, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.659754, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_ebday"]
resource_name = "win"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(3, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.659754, 1),
"update": 0,
"values": [Color(0, 1, 0, 1), Color(0, 1, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wbp4u"]
_data = {
"RESET": SubResource("Animation_0vijb"),
"lose": SubResource("Animation_025r6"),
"win": SubResource("Animation_ebday")
}

[node name="Quest" type="Node2D" groups=["quests"]]
texture_filter = 1
script = ExtResource("1_rtgrk")

[node name="Target" parent="." instance=ExtResource("2_qr0tn")]
process_mode = 1
z_index = -1

[node name="Job" parent="." instance=ExtResource("3_3j6i2")]

[node name="Timer" type="Timer" parent="."]
process_mode = 1
one_shot = true

[node name="UnlockTimer" type="Timer" parent="."]
process_mode = 1
one_shot = true

[node name="TargetAnimation" type="Node2D" parent="."]

[node name="TargetRing" type="Sprite2D" parent="TargetAnimation"]
z_index = -1
texture = ExtResource("4_ywm42")

[node name="RingGhost" type="Sprite2D" parent="TargetAnimation"]
z_index = -1
texture = ExtResource("4_ywm42")

[node name="TargetAnim" type="AnimationPlayer" parent="TargetAnimation"]
libraries = {
"": SubResource("AnimationLibrary_58pig")
}
autoplay = "idle"
playback_default_blend_time = 0.05
script = ExtResource("4_csc0v")

[node name="Lock" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.784314)
z_index = 1
position = Vector2(0, -17)
texture = ExtResource("6_7a5f6")

[node name="LockAnimation" type="AnimationPlayer" parent="Lock"]
libraries = {
"": SubResource("AnimationLibrary_vbhyh")
}
autoplay = "locked"
playback_default_blend_time = 0.05
script = ExtResource("7_vrxjh")

[node name="Effect" type="Sprite2D" parent="."]
visible = false
z_index = -1
texture = ExtResource("8_xxjx3")

[node name="EffectAnim" type="AnimationPlayer" parent="Effect"]
libraries = {
"": SubResource("AnimationLibrary_wbp4u")
}
script = ExtResource("9_688y4")

[node name="Selected" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_u2hce")
volume_db = -6.0

[node name="Targeted" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_dk1aq")
volume_db = -6.0

[node name="Incorrect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_83d8e")
volume_db = -6.0

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_8dv6b")
volume_db = -6.0

[connection signal="failed" from="." to="Effect/EffectAnim" method="_on_quest_failed"]
[connection signal="succeeded" from="." to="Effect/EffectAnim" method="_on_quest_succeeded"]
[connection signal="unlocked" from="." to="Lock/LockAnimation" method="_on_quest_unlocked"]
[connection signal="hover" from="Target" to="TargetAnimation/TargetAnim" method="_on_target_hover"]
[connection signal="idle" from="Target" to="TargetAnimation/TargetAnim" method="_on_target_idle"]
[connection signal="selected" from="Target" to="." method="_on_target_selected"]
[connection signal="selected" from="Target" to="TargetAnimation/TargetAnim" method="_on_target_selected"]
[connection signal="targeted" from="Target" to="TargetAnimation/TargetAnim" method="_on_target_targeted"]
[connection signal="damaged" from="Job" to="." method="_on_job_damaged"]
[connection signal="defeated" from="Job" to="." method="_on_job_defeated"]
[connection signal="exploded" from="Job" to="." method="_on_job_exploded"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="UnlockTimer" to="." method="_on_unlock_timer_timeout"]
